Optimize rate and details calculation
